# binance_trading_bot

./: README.md  base_urls.py  env.py  main.py  pyproject.toml
connectors/: binance_futures.py
