[tool.poetry]
name = "binance-trading-bot"
version = "0.1.0"
description = ""
authors = ["Michal Freliszka <michal@meant4.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
